test/compile_errors/err_implicit_main_import_stmt.w
//! expect-build-fail: expected declaration

use implicit_main.bad_import

fn main:
    print("ok")
